@@ -1,3 +1,13 @@
+2003-09-13  Arseny Slobodjuck  <ampy@ich.dvo.ru>
+
+	Fix msvc distrib
+	* makemake.in: don't incude rules unexecutable by msvc nmake
+	(makemake, unixconf.h, Makefile, config.status, VERSION)
+	Don't create base and full directories for msvc distrib
+	Call it differently (clisp-x.xx-msvc-win32.zip)
+	Use find -exec for chmod to avoid problems in cygwin
+	Call rm -rf directly (RMRF=-del, inappropriate)
+
 2003-09-12  Sam Steingold  <sds@gnu.org>
 
 	* version.h: reinstated for the sake of non-autoconf platforms
